--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-PORT = 7000
-DB_NAME =snake-game
-DB_PORT = 27017
-DB_USER = iai-sms
-DB_PASSWORD = OX03gkm1yU8Up6bF
-DB_HOST = 0.0.0.0
-MONGODB_URI = mongodb+srv://iai-sms:OX03gkm1yU8Up6bF@cluster0.v6qapth.mongodb.net/snake-game
+PORT=7000
+DB_NAME=snake-game
+DB_PORT=27017
+DB_USER=lilndabose
+DB_PASSWORD=xzLuzkg1MlkvIrqA
+DB_HOST=0.0.0.0
+MONGODB_URI = mongodb+srv://lilndabose:xzLuzkg1MlkvIrqA@cluster0.mnivnpc.mongodb.net/snake-game
